Fix opacity transition overlap bug in Chrome and Firefox

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     right:0;
     background:white;
     overflow: hidden;
+    z-index:1;
     white-space: nowrap;
     color:#757575;
     box-shadow:0px 0px 0.25rem black;
